--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,11 @@
         <item name="android:layout_marginLeft">15dp</item>
     </style>
 
+    <style name="star">
+        <item name="android:background">@drawable/pingjia_ic_daxing1</item>
+        <item name="android:layout_width">11dp</item>
+        <item name="android:layout_height">11dp</item>
+        <item name="android:layout_marginRight">2dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
 </resources>
