--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -465,13 +465,32 @@
             </LinearLayout>
 
         </LinearLayout>
+        <!--缺省页-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="60dp"
+            android:orientation="vertical">
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/item_home_shop"
-            >
-        </ListView>
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="137dp"
+                android:layout_gravity="center"
+                android:background="@drawable/quesehng_ic_zwdjxxxa" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="74dp"
+                android:text="附近暂无商家信息"
+                android:textColor="@color/typed_text_color"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+
     </LinearLayout>
 </ScrollView>
 
