--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,8 @@
             android:layout_toRightOf="@id/iv_expand"
             android:background="null"
             android:hint="请输入手机号码"
+            android:inputType="phone"
+            android:maxLength="11"
             android:textSize="17sp" />
 
         <ImageView
@@ -88,6 +90,8 @@
             android:layout_toLeftOf="@id/tv_obtain_verification"
             android:background="null"
             android:hint="请输入验证码"
+            android:inputType="number"
+            android:maxLength="4"
             android:textSize="17sp" />
 
         <TextView
