--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -54,6 +54,8 @@
             android:layout_toRightOf="@id/iv_expand"
             android:background="null"
             android:hint="请输入手机号码"
+            android:inputType="phone"
+            android:maxLength="11"
             android:textSize="17sp" />
 
 
@@ -80,7 +82,11 @@
             android:layout_height="match_parent"
             android:layout_toLeftOf="@id/tv_obtain_verification"
             android:background="null"
+            android:digits="1234567890abcdefghijklmnopqrstuvwxyz"
             android:hint="请输入密码"
+            android:inputType="textPassword"
+            android:maxLength="16"
+            android:maxLines="6"
             android:textSize="17sp" />
 
 
