--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="44dp">
+    android:layout_height="44dp"
+    android:background="@color/bg_white">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -11,8 +12,8 @@
             android:id="@+id/iv_back"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            android:src="@drawable/top_icon_fanhui"
-            android:padding="15dp" />
+            android:padding="15dp"
+            android:src="@drawable/top_icon_fanhui" />
 
         <TextView
             android:layout_width="wrap_content"
