选择收货地址页面编写

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,11 @@
         <item name="android:layout_marginRight">2dp</item>
         <item name="android:layout_gravity">center</item>
     </style>
+
+    <style name="line_fff">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">#F0F0F0</item>
+        <item name="android:layout_marginLeft">15dp</item>
+    </style>
 </resources>
