--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toRightOf="@id/iv_expand"
-            android:background="null"
+            android:background="@null"
             android:hint="请输入手机号码"
             android:inputType="phone"
             android:maxLength="11"
@@ -81,7 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toLeftOf="@id/tv_obtain_verification"
-            android:background="null"
+            android:background="@null"
             android:digits="1234567890abcdefghijklmnopqrstuvwxyz"
             android:hint="请输入密码"
             android:inputType="textPassword"
