--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -52,7 +52,7 @@
             </LinearLayout>
 
 
-            <ImageView
+            <TextView
                 android:id="@+id/iv_line"
                 android:layout_width="1dp"
                 android:layout_height="23dp"
@@ -92,7 +92,9 @@
         android:layout_width="match_parent"
         android:layout_height="76dp"
         android:background="@color/bg_white"
-        android:padding="15dp">
+        android:paddingLeft="15dp"
+        android:paddingTop="15dp"
+        android:paddingRight="15dp">
 
         <RelativeLayout
             android:id="@+id/rl_positioning"
@@ -120,32 +122,111 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/rl_positioning"
-            android:layout_marginTop="5dp">
+            android:layout_marginTop="6dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="23dp"
                 android:text="海关大厦"
                 android:textColor="@color/typed_text_color"
                 android:textSize="17sp" />
 
             <RelativeLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <ImageView
                     android:layout_width="17dp"
                     android:layout_height="17dp"
-                    android:background="@drawable/icon_ic_dingwei"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="8dp"
+                    android:layout_toLeftOf="@id/tv_re_locate"
+                    android:background="@drawable/icon_ic_dingwei" />
+
                 <TextView
+                    android:id="@+id/tv_re_locate"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:text="重新定位"
+                    android:textColor="@color/main_color"
+                    android:textSize="17sp" />
             </RelativeLayout>
         </RelativeLayout>
 
-
+        <ImageView
+            style="@style/line_fff"
+            android:layout_alignParentBottom="true" />
     </RelativeLayout>
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:background="@color/bg_white"
+
+        android:paddingLeft="15dp">
+
+        <ImageView
+            android:id="@+id/iv_shouhdz"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="14dp"
+            android:background="@drawable/icon_ic_shouhdz" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginBottom="12dp"
+            android:layout_toRightOf="@id/iv_shouhdz"
+            android:text="收货地址"
+            android:textColor="#808080"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_white"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="143dp"
+            android:layout_marginTop="58dp"
+            android:background="@drawable/quesehng_ic_zwshouhdz" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity=""
+            android:layout_marginTop="15dp"
+            android:text="您暂无收货地址哦..."
+            android:textColor="@color/typed_text_color"
+            android:textSize="15sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="赶快添加吧~"
+            android:textColor="@color/hint_text_color"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="75dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="19dp"
+            android:background="@drawable/address_main_color"
+            android:gravity="center"
+            android:text="新增地址"
+            android:textColor="@color/main_color"
+            android:textSize="15sp" />
+    </LinearLayout>
 
 </LinearLayout>
