--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="navigation_color">#666666</color>
     <color name="text_white">#FFFFFF</color>
     <color name="main_color">#FFBA17</color>
+
+    <color name="white">#FFFFFF</color>
 </resources>
