--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#FFBA17</color>
+    <color name="colorPrimaryDark">#FF9800</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
     <color name="typed_text_color">#333333</color>
