新增地址页面编写

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,8 +42,8 @@
                 android:src="@drawable/top_ic_xlxz" />
 
             <ImageView
-                android:layout_width="44dp"
-                android:layout_height="44dp"
+                android:layout_width="49dp"
+                android:layout_height="49dp"
                 android:layout_alignParentEnd="true"
                 android:padding="15dp"
                 android:src="@drawable/top_ic_xxx" />
@@ -296,8 +296,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                style="@style/icon_small"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="8dp"
                 android:background="@drawable/tab_icon_youhui" />
@@ -342,8 +341,7 @@
             android:layout_marginTop="30dp">
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                style="@style/icon_small"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="9dp"
                 android:background="@drawable/tab_icon_fujin" />
