--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,57 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
         <item name="android:background">#F0F0F0</item>
-        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_alignParentBottom">true</item>
     </style>
+
+    <style name="text">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="input_box">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">44dp</item>
+        <item name="android:background">@color/bg_white</item>
+        <item name="android:paddingLeft">15dp</item>
+    </style>
+
+    <style name="edit_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_marginRight">15dp</item>
+        <item name="android:textColorHint">@color/hint_text_color</item>
+        <item name="android:textColor">@color/typed_text_color</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="arrow">
+        <item name="android:layout_height">12dp</item>
+        <item name="android:layout_width">8dp</item>
+        <item name="android:background">@drawable/common_ic_jinrusa</item>
+        <item name="android:layout_marginRight">15dp</item>
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_centerVertical">true</item>
+    </style>
+
+    <style name="button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">44dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_marginRight">15dp</item>
+        <item name="android:background">@drawable/bg_login_main_color</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/text_white</item>
+    </style>
+
+    <style name="icon_small">
+        <item name="android:layout_width">19dp</item>
+        <item name="android:layout_height">19dp</item>
+    </style>
+
 </resources>
