--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="main_color">#FFBA17</color>
     <color name="category_color">#F5F5F5</color>
     <color name="white">#FFFFFF</color>
+    <color name="red">#FF4A4A</color>
 </resources>
