--- a/app/src/main/res/layout/itet_order.xml
+++ b/app/src/main/res/layout/itet_order.xml
@@ -46,7 +46,7 @@
         android:layout_below="@id/ll_store_name"
         android:layout_marginLeft="42dp"
         android:layout_marginTop="10dp"
-        android:background="#fofofo" />
+        android:background="#f0f0f0" />
 
     <LinearLayout
         android:layout_width="match_parent"
