--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="170dp"
-        android:background="@drawable/bg_menu_gradient"
+        android:background="@drawable/meal_bnt_beijing"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -45,7 +45,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="-120dp"
         android:layout_marginRight="15dp"
-        android:background="@color/bg_white"
+        android:background="@drawable/meal_bnt_baisebj"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -300,8 +300,7 @@
             android:layout_height="match_parent"
             android:paddingLeft="15dp"
             android:paddingTop="15dp"
-            tools:listitem="@layout/item_product_name"
-            />
+            tools:listitem="@layout/item_product_name" />
     </LinearLayout>
 
 </LinearLayout>
