确定订单页面编写和订单跟踪背景样式修改

--- a/app/src/main/res/drawable/bg_menu_gradient.xml
+++ b/app/src/main/res/drawable/bg_menu_gradient.xml
@@ -10,7 +10,7 @@
     <!--android:type="linear"-->
     <!--android:useLevel="true" />-->
     <gradient
-        android:angle="270"
-        android:endColor="#FFFFFF"
+        android:angle="135"
+        android:endColor="#FFCF4C"
         android:startColor="#FFAA45" />
 </shape>
