--- a/app/src/main/res/layout/activity_order_tracking.xml
+++ b/app/src/main/res/layout/activity_order_tracking.xml
@@ -75,7 +75,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginTop="-95dp"
             android:layout_marginRight="15dp"
-            android:background="@color/white"
+            android:background="@drawable/bg_white"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -172,7 +172,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:background="@color/white"
+            android:background="@drawable/bg_white"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -187,7 +187,8 @@
                     android:gravity="center_vertical"
                     android:text="水果先生"
                     android:textColor="@color/black"
-                    android:textSize="17sp" />
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:layout_width="5dp"
@@ -400,7 +401,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:background="@color/white"
+            android:background="@drawable/bg_white"
             android:orientation="vertical">
             <!--配送信息-->
             <RelativeLayout
@@ -503,7 +504,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="15dp"
-            android:background="@color/white"
+            android:background="@drawable/bg_white"
             android:orientation="vertical">
             <!--订单信息-->
             <RelativeLayout
