密码登录逻辑实现

--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/header"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="58dp"
         android:text="密码登录"
         android:textColor="@color/black"
         android:textSize="33sp" />
@@ -24,7 +24,7 @@
         android:layout_height="56dp"
         android:layout_below="@id/tv_verification"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="50dp"
         android:layout_marginRight="30dp">
 
         <TextView
@@ -69,18 +69,20 @@
         android:layout_height="56dp"
         android:layout_below="@id/rl_number"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="25dp"
         android:layout_marginRight="30dp">
 
 
         <EditText
+            android:id="@+id/et_password"
             style="@style/base_password_edit"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toLeftOf="@id/tv_obtain_verification"
             android:background="@null"
             android:digits="1234567890abcdefghijklmnopqrstuvwxyz"
-            android:hint="请输入密码" />
+            android:hint="请输入密码"
+            android:maxLength="16"
+            android:minLines="6" />
 
         <ImageView
             style="@style/dividing_line"
@@ -97,6 +99,7 @@
         android:layout_marginTop="45dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/bg_login_selector"
+        android:enabled="false"
         android:gravity="center"
         android:text="登录"
         android:textColor="@color/text_white"
@@ -107,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_login"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="125dp">
+        android:layout_marginTop="100dp">
 
         <ImageView
             android:layout_width="43dp"
