--- a/app/src/main/res/layout/activity_set_password.xml
+++ b/app/src/main/res/layout/activity_set_password.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/header"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="58dp"
         android:text="设置登录密码"
         android:textColor="@color/black"
         android:textSize="33sp" />
@@ -24,7 +24,7 @@
         android:layout_height="56dp"
         android:layout_below="@id/tv_password"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="50dp"
         android:layout_marginRight="30dp">
 
 
@@ -33,10 +33,10 @@
             style="@style/base_edit"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@id/iv_expand"
             android:background="@null"
             android:hint="请输入新密码"
             android:maxLength="16"
+            android:inputType="textPassword"
             android:maxLines="6"
             android:textSize="17sp" />
 
@@ -54,15 +54,15 @@
         android:layout_height="56dp"
         android:layout_below="@id/rl_number"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="25dp"
         android:layout_marginRight="30dp">
 
 
         <EditText
+            android:id="@+id/et_password"
             style="@style/base_edit"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toLeftOf="@id/tv_obtain_verification"
             android:background="@null"
             android:hint="请再次输入密码"
             android:inputType="textPassword"
@@ -95,6 +95,7 @@
         android:layout_marginTop="68dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/bg_login_selector"
+        android:enabled="false"
         android:gravity="center"
         android:text="登录"
         android:textColor="@color/text_white"
