封装好跳转携带数据

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,12 +38,13 @@
             android:src="@drawable/top_ic_xlxz" />
 
         <ImageView
-            android:layout_width="19dp"
-            android:layout_height="19dp"
+            android:id="@+id/iv_notice"
+            android:layout_width="49dp"
+            android:layout_height="49dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/top_ic_xxx" />
+            android:padding="15dp"
+            android:src="@drawable/top_ic_xxx" />
 
     </RelativeLayout>
 
