--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -125,6 +125,7 @@
             android:layout_marginTop="6dp">
 
             <TextView
+                android:id="@+id/tv_cur_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="23dp"
@@ -204,7 +205,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity=""
             android:layout_marginTop="15dp"
             android:text="您暂无收货地址哦..."
             android:textColor="@color/typed_text_color"
