--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -79,8 +79,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@null"
-            android:digits="1234567890abcdefghijklmnopqrstuvwxyz"
             android:hint="请输入密码"
+            android:inputType="textPassword"
             android:maxLength="16"
             android:minLines="6" />
 
