验证码、密码登录接口实现

--- a/app/src/main/res/layout/activity_set_password.xml
+++ b/app/src/main/res/layout/activity_set_password.xml
@@ -97,7 +97,7 @@
         android:background="@drawable/bg_login_selector"
         android:enabled="false"
         android:gravity="center"
-        android:text="登录"
+        android:text="进入首页"
         android:textColor="@color/text_white"
         android:textSize="18sp" />
 
