--- a/app/src/main/res/drawable/bg_address_selector.xml
+++ b/app/src/main/res/drawable/bg_address_selector.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/checkbox_yixuan" android:state_checked="true" />
+    <item android:drawable="@drawable/checkbox_yixuan" android:state_selected="true" />
+    <item android:drawable="@drawable/checkbox_yixuan1" />
 
-    <item android:drawable="@drawable/checkbox_yixuan" android:state_enabled="true" />
-    <item android:drawable="@drawable/checkbox_yixuan1" android:state_enabled="false" />
 </selector>
