--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -20,6 +20,7 @@
             android:text="联系人" />
 
         <EditText
+            android:id="@+id/et_name"
             style="@style/edit_text"
             android:layout_marginLeft="115dp"
             android:hint="请输入收货人姓名"
@@ -28,28 +29,8 @@
         <ImageView style="@style/line_fff" />
 
     </RelativeLayout>
-    <!--<RadioGroup-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="44dp"-->
-    <!--android:background="@color/bg_white"-->
-    <!--android:orientation="horizontal">-->
 
-    <!--<RadioButton-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:checked="true"-->
-    <!--android:text="先生"-->
-    <!--android:textColor="@color/black"-->
-    <!--android:textSize="17sp" />-->
 
-    <!--<RadioButton-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="女士"-->
-    <!--android:textColor="@color/black"-->
-    <!--android:textSize="17sp" />-->
-
-    <!--</RadioGroup>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="44dp"
@@ -57,10 +38,11 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iv_man"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="115dp"
+            android:layout_marginLeft="135dp"
             android:background="@drawable/bg_address_selector" />
 
         <TextView
@@ -73,6 +55,7 @@
             android:textSize="17sp" />
 
         <ImageView
+            android:id="@+id/iv_woman"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
@@ -99,6 +82,7 @@
             android:text="手机号" />
 
         <EditText
+            android:id="@+id/et_phone_number"
             style="@style/edit_text"
             android:layout_marginLeft="115dp"
             android:hint="请输入手机号码"
@@ -117,6 +101,7 @@
             android:text="收货地址" />
 
         <EditText
+            android:id="@+id/et_address"
             style="@style/edit_text"
             android:layout_marginLeft="115dp"
             android:hint="点击选择地址" />
@@ -137,6 +122,7 @@
             android:text="门牌号" />
 
         <EditText
+            android:id="@+id/et_house_number"
             style="@style/edit_text"
             android:layout_marginLeft="115dp"
             android:hint="详细地址，例：1号楼103室"
@@ -148,6 +134,7 @@
 
 
     <TextView
+        android:id="@+id/tv_ok"
         style="@style/button"
         android:layout_marginTop="40dp"
         android:text="保存" />
