--- a/app/src/main/res/layout/activity_my_address.xml
+++ b/app/src/main/res/layout/activity_my_address.xml
@@ -1,83 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="71dp">
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:id="@+id/rl_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp">
-
-            <TextView
-                android:id="@+id/tv_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="新港中路"
-                android:textColor="@color/black"
-                android:textSize="17sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="100dp"
-                android:layout_toRightOf="@id/tv_address"
-                android:singleLine="true"
-                android:text="新港中路357六楼客村地..."
-                android:textColor="@color/black"
-                android:textSize="17sp" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/rl_address"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp">
-
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="张铭明"
-                android:textColor="@color/navigation_color"
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/tv_gender"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="23dp"
-                android:layout_marginRight="27dp"
-                android:layout_toRightOf="@id/tv_name"
-                android:text="先生"
-                android:textColor="@color/navigation_color"
-                android:textSize="15sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/tv_gender"
-                android:text="15925245688"
-                android:textColor="@color/navigation_color"
-                android:textSize="15sp" />
-        </RelativeLayout>
-
-    </RelativeLayout>
+    <include layout="@layout/layout_header" />
 
     <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:padding="15dp"
-        android:src="@drawable/icon_ic_bianji" />
-</RelativeLayout>
+        android:layout_width="150dp"
+        android:layout_height="143dp"
+        android:layout_marginTop="61dp"
+        android:background="@drawable/quesehng_ic_zwshouhdz" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="您暂无收货地址哦..."
+        android:textColor="@color/typed_text_color"
+        android:textSize="15sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="赶快添加吧~"
+        android:textColor="@color/hint_text_color"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/tv_address"
+        android:layout_width="75dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="19dp"
+        android:background="@drawable/address_main_color"
+        android:gravity="center"
+        android:text="新增地址"
+        android:textColor="@color/main_color" />
+</LinearLayout>
