--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -189,44 +189,62 @@
             android:textSize="14sp" />
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_white"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="143dp"
-            android:layout_marginTop="58dp"
-            android:background="@drawable/quesehng_ic_zwshouhdz" />
+        <ListView
+            android:id="@+id/lv_address"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/header"
+            android:divider="@null"
+            android:dividerHeight="15dp"
+            android:headerDividersEnabled="true"
+            android:footerDividersEnabled="false"
+            />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="您暂无收货地址哦..."
-            android:textColor="@color/typed_text_color"
-            android:textSize="15sp" />
+        <LinearLayout
+            android:id="@+id/ll_empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/bg_white"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="赶快添加吧~"
-            android:textColor="@color/hint_text_color"
-            android:textSize="12sp" />
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="143dp"
+                android:layout_marginTop="58dp"
+                android:background="@drawable/quesehng_ic_zwshouhdz" />
 
-        <TextView
-            android:layout_width="75dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="19dp"
-            android:background="@drawable/address_main_color"
-            android:gravity="center"
-            android:text="新增地址"
-            android:textColor="@color/main_color"
-            android:textSize="15sp" />
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="您暂无收货地址哦..."
+                android:textColor="@color/typed_text_color"
+                android:textSize="15sp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="赶快添加吧~"
+                android:textColor="@color/hint_text_color"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/tv_add_address"
+                android:layout_width="75dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="19dp"
+                android:background="@drawable/address_main_color"
+                android:gravity="center"
+                android:text="新增地址"
+                android:textColor="@color/main_color"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+    </RelativeLayout>
 </LinearLayout>
