--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -62,6 +62,7 @@
             android:orientation="vertical">
             <!--搜索框-->
             <RelativeLayout
+                android:id="@+id/rl_search_for"
                 android:layout_width="match_parent"
                 android:layout_height="33dp"
                 android:layout_marginLeft="15dp"
