--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -4,45 +4,49 @@
     android:layout_height="match_parent"
     android:background="@color/category_color"
     android:orientation="vertical">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/white"/>
     <!--头像-->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@color/bg_white">
 
+        <!--用户名称-->
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="猫玖铲屎官"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
         <RelativeLayout
-            android:layout_width="120dp"
-            android:layout_height="60dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp">
-            <!--用户名称-->
+            android:layout_below="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            >
+
+            <ImageView
+                android:layout_width="14dp"
+                android:layout_height="14dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/top_ic_shouji" />
+
             <TextView
+                android:id="@+id/tv_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="猫玖铲屎官"
-                android:textColor="@color/black"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+                android:layout_marginLeft="22dp"
+                android:text="159****5698"
+                android:textColor="@color/typed_text_color"
+                android:textSize="16sp" />
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true">
-
-                <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/top_ic_shouji" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="22dp"
-                    android:text="159****5698"
-                    android:textColor="@color/typed_text_color"
-                    android:textSize="16sp" />
-            </RelativeLayout>
         </RelativeLayout>
         <!--头像-->
         <ImageView
@@ -73,6 +77,7 @@
             android:textSize="17sp"
             android:textStyle="bold" />
     </RelativeLayout>
+
     <!--第一行-->
     <LinearLayout
         android:layout_width="match_parent"
@@ -82,6 +87,7 @@
         android:paddingTop="35dp">
         <!--收货地址-->
         <LinearLayout
+            android:id="@+id/ll_address"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -105,6 +111,7 @@
         </LinearLayout>
         <!--我的代金券-->
         <LinearLayout
+            android:id="@+id/ll_voucher"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -128,6 +135,7 @@
         </LinearLayout>
         <!--我的收藏-->
         <LinearLayout
+            android:id="@+id/ll_collect"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -150,7 +158,7 @@
 
         </LinearLayout>
     </LinearLayout>
-    <!--第一行-->
+    <!--第二行-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -159,6 +167,7 @@
         android:paddingTop="35dp">
         <!--我的评价-->
         <LinearLayout
+            android:id="@+id/ll_review"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -182,6 +191,7 @@
         </LinearLayout>
         <!--帮助与反馈-->
         <LinearLayout
+            android:id="@+id/ll_help"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -205,6 +215,7 @@
         </LinearLayout>
         <!--客服咨询-->
         <LinearLayout
+            android:id="@+id/ll_ask"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -227,7 +238,7 @@
 
         </LinearLayout>
     </LinearLayout>
-    <!--第一行-->
+    <!--第三行-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -237,6 +248,7 @@
         android:paddingBottom="30dp">
         <!--商家入驻-->
         <LinearLayout
+            android:id="@+id/ll_shop_join"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -260,6 +272,7 @@
         </LinearLayout>
         <!--骑手入驻-->
         <LinearLayout
+            android:id="@+id/ll_diliver_join"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -283,6 +296,7 @@
         </LinearLayout>
         <!--设置-->
         <LinearLayout
+            android:id="@+id/ll_settings"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
