--- a/app/src/main/res/layout/item_my_address.xml
+++ b/app/src/main/res/layout/item_my_address.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:minHeight="71dp">
 
     <RelativeLayout
@@ -24,6 +25,7 @@
                 android:textSize="17sp" />
 
             <TextView
+                android:id="@+id/tv_house_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -62,6 +64,7 @@
                 android:textSize="15sp" />
 
             <TextView
+                android:id="@+id/tv_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -74,6 +77,7 @@
     </RelativeLayout>
 
     <ImageView
+        android:id="@+id/edit"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_alignParentEnd="true"
